; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_adjust_impl.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_arc.c_arc_adjust_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*, i32, i64, i64)* @arc_adjust_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @arc_adjust_impl(%struct.TYPE_4__* %0, i32 %1, i64 %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load i64, i64* %8, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %35

13:                                               ; preds = %4
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = load i64, i64* %9, align 8
  %18 = getelementptr inbounds i32, i32* %16, i64 %17
  %19 = call i64 @zfs_refcount_count(i32* %18)
  %20 = icmp sgt i64 %19, 0
  br i1 %20, label %21, label %35

21:                                               ; preds = %13
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = load i64, i64* %9, align 8
  %26 = getelementptr inbounds i32, i32* %24, i64 %25
  %27 = call i64 @zfs_refcount_count(i32* %26)
  %28 = load i64, i64* %8, align 8
  %29 = call i64 @MIN(i64 %27, i64 %28)
  store i64 %29, i64* %10, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %31 = load i32, i32* %7, align 4
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* %9, align 8
  %34 = call i32 @arc_evict_state(%struct.TYPE_4__* %30, i32 %31, i64 %32, i64 %33)
  store i32 %34, i32* %5, align 4
  br label %36

35:                                               ; preds = %13, %4
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %35, %21
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i64 @zfs_refcount_count(i32*) #1

declare dso_local i64 @MIN(i64, i64) #1

declare dso_local i32 @arc_evict_state(%struct.TYPE_4__*, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
